--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -3,10 +3,23 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 15px 28px 15px 24px;
-    h3 {
-        color: $red;
-        font-size: 20px;
-        font-weight: 700;
+    div {
+        display: flex;
+        .logo {
+            display: flex;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+        }
+    }
+    div {
+        h3 {
+            padding-top: 16px;
+            align-items: center;
+            color: $red;
+            font-size: 20px;
+            font-weight: 700;
+        }
     }
     nav {
         display: flex;
