--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,7 +43,28 @@ header {
   padding: 15px 28px 15px 24px;
 }
 
-header h3 {
+header div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header div .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 50px;
+  height: 50px;
+}
+
+header div h3 {
+  padding-top: 16px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #e60023;
   font-size: 20px;
   font-weight: 700;
